<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Assort Camera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="root_dir">ROOT</string>
    <string name="launch_camera">Launch Camera</string>
    <string name="add_new_dir">Add new directory</string>
    <string name="enter_name">Enter name.</string>
    <string name="confirm_del">Are you sure to delete ?</string>
    <string name="confirm">Confirmation</string>
    <string name="not_selected">Not selected.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="some_error">Some error occurred.</string>
    <string name="storage_usage">Storage usage</string>
    <string name="title_activity_storage_usage">StorageUsageActivity</string>
    <string name="zero">0</string>
    <string name="num_dir">Number of folders</string>
    <string name="num_pic">Number of pictures</string>
    <string name="total_byte">Total bytes</string>
    <string name="title_activity_dir_select">DirSelectActivity</string>
    <string name="move_here"><u>Move to here</u></string>
    <string name="data_moved">Data has been moved.</string>
    <string name="share_picture">Share picture</string>
    <string name="data_not_moved">Could not move into descendant or itself.</string>
    <string name="not_supported">Unfortunately, this application does not support your device.</string>

</resources>
