<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="iz.supereasycamera.StorageUsageActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/storage_usage"
        android:id="@+id/txtStorageUsage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/txtStorageUsage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:rowCount="4"
        android:columnOrderPreserved="false"
        android:layoutMode="opticalBounds"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/num_dir"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/zero"
            android:id="@+id/txtNumDir"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="@color/black"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/num_pic"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/zero"
            android:id="@+id/txtNumPic"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="@color/black"
            android:gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total_byte"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/zero"
            android:id="@+id/txtTotalByte"
            android:layout_row="2"
            android:layout_column="1"
            android:textColor="@color/black"
            android:gravity="right" />
    </GridLayout>

</RelativeLayout>
