<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="iz.supereasycamera.DirSelectActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/layoutBottom"
        android:layout_marginTop="8dp"
        android:background="@color/background">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_here"
            android:id="@+id/btnOk"
            android:background="@drawable/selector_button"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_above="@+id/layoutBottom"
        tools:listitem="@layout/listview_item"
        android:layout_below="@+id/layoutTop"
        android:background="@color/background"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutTop"
        android:background="@color/background">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrev"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_prev"
            android:background="@drawable/selector_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnPrev">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Small Text"
                android:id="@+id/txtDirTree"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:ellipsize="start" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/root_dir"
                android:id="@+id/txtDir"
                android:layout_gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:ellipsize="marquee"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
